--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,8 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-
-//    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
-//    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
-//    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+    implementation 'com.google.cloud:google-cloud-texttospeech'
 }
 
 tasks.named('test') {
