:art: [Chore] TIMESTAMP LocalDateTime으로 변경, 응모 유효성 검사 추가

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,13 @@ dependencyManagement {
     }
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+        mavenBom "com.google.cloud:libraries-bom:26.14.0"
+    }
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 
