--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
     implementation 'com.google.cloud:google-cloud-texttospeech'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+    implementation 'org.quartz-scheduler:quartz:2.3.2'
+
 }
 
 dependencyManagement {
