--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.quartz-scheduler:quartz:2.3.2'
+    implementation 'commons-io:commons-io:2.11.0'
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
